--- a/FriendParty/Gemfile
+++ b/FriendParty/Gemfile
@@ -35,6 +35,9 @@ gem 'devise'
 #simple form 
 gem 'simple_form', '~> 3.1.0.rc1', github: 'plataformatec/simple_form', branch: 'master'
 
+#font awesome
+gem 'font-awesome-sass'
+
 # Use unicorn as the app server
 # gem 'unicorn'
 
