--- a/FriendParty/Gemfile
+++ b/FriendParty/Gemfile
@@ -58,6 +58,8 @@ group :development , :test do
   gem "spring"
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
+  # generates fake data
+  gem 'faker'
 end
 # gem 'debugger', group: [:development, :test]
 
