--- a/FriendParty/test/fixtures/groups.yml
+++ b/FriendParty/test/fixtures/groups.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  intro: MyText
+  name: night party
+  intro: hold a party at tonight
 
 two:
-  name: MyString
-  intro: MyText
+  name: swim party
+  intro: come on and swimming
