--- a/FriendParty/Gemfile
+++ b/FriendParty/Gemfile
@@ -38,6 +38,10 @@ gem 'devise'
 #font awesome
 gem 'font-awesome-sass'
 
+#markdown 
+gem 'redcarpet'
+gem 'coderay'
+
 #will paginate
 gem 'will_paginate', '~> 3.0.6'
 gem 'will_paginate-bootstrap'
