--- a/FriendParty/Gemfile
+++ b/FriendParty/Gemfile
@@ -53,6 +53,12 @@ gem 'bootstrap3-datetimepicker-rails', '~> 4.15.35'
 #notification
 gem "gritter", "1.2.0"
 
+#图片上传
+gem 'carrierwave'
+gem 'carrierwave-qiniu'
+gem 'qiniu', '~> 6.2.1'
+gem 'mini_magick', '3.7.0', require: false
+
 # Use unicorn as the app server
 # gem 'unicorn'
 
